packages/deployment/k8s/ttk/jic/ttk-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ttk-frontend
  labels:
  annotations:
spec:
  #ingressClassName: nginx
  rules:
  - host: testing-toolkit.local
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: testing-toolkit-frontend
            port:
              number: 6060
